<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2010 Daniel Weisser

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
<resources>
	<string name="label">LDAP</string>
	<string name="app_name">LDAP Sync</string>

	<!-- AuthenticatorActivity -->
	<skip />
	<string name="login_activity_host_label">Host</string>
	<string name="login_activity_port_label">Port</string>
	<string name="login_activity_encryption_label">Encryption</string>
	<string name="login_activity_encryption_prompt">Choose your encryption method</string>
	<string name="login_activity_username_label">Bind DN (Leave empty for anonymous)</string>
	<string name="login_activity_password_label">Bind Password (Leave empty for anonymous)</string>
	<string name="login_activity_basedn_label">BaseDN</string>
	<string name="login_activity_searchfilter_label">Search Filter</string>
	<string name="login_activity_ldap_mappings_label">LDAP Mappings</string>
	<string name="login_activity_firstname_label">First Name</string>
	<string name="login_activity_lastname_label">Last Name</string>
	<string name="login_activity_officephone_label">Office Phone</string>
	<string name="login_activity_cellphone_label">Cell Phone</string>
	<string name="login_activity_homephone_label">Home Phone</string>
	<string name="login_activity_mail_label">E-Mail</string>
	<string name="login_activity_image_label">Image</string>
	<string name="login_activity_street_label">Street</string>
	<string name="login_activity_city_label">City</string>
	<string name="login_activity_state_label">State</string>
	<string name="login_activity_zip_label">Zip code</string>
	<string name="login_activity_country_label">Country</string>
	<string name="login_activity_next_button">Next</string>
	<string name="login_activity_done_button">Done</string>
	
	<string name="edit_settings_header">Properties</string>
	<string name="edit_settings_done_button">Save</string>
	<string name="login_activity_syncNow_button">Sync</string>

	<!-- Message shown in dialog if the username or password is invalid. -->
	<string name="login_activity_loginfail">The username or password isn\'t valid. A LDAP
		account is required. Please try again. </string>
	<!--
		Message shown in progress dialog while app connects to the server
	-->
	<string name="ui_activity_authenticating">Authenticating\u2026</string>

	<!-- Title string for Login activity-->
	<string name="ui_activity_title">LDAP Server settings</string>
	<string name="asd">asd</string>
</resources>
