<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2010 Daniel Weisser

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="858dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_firstname_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <Spinner
		    android:id="@+id/firstname_spinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />
  
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_lastname_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

		<Spinner
		    android:id="@+id/lastname_spinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_officephone_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <Spinner
		    android:id="@+id/officephone_spinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_cellphone_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <Spinner
		    android:id="@+id/cellphone_spinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_homephone_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <Spinner
		    android:id="@+id/homephone_spinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_mail_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <Spinner
		    android:id="@+id/mail_spinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_image_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <Spinner
		    android:id="@+id/image_spinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_street_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <Spinner
		    android:id="@+id/street_spinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_city_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <Spinner
		    android:id="@+id/city_spinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_state_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <Spinner
		    android:id="@+id/state_spinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_zip_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <Spinner
		    android:id="@+id/zip_spinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_country_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <Spinner
		    android:id="@+id/country_spinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dip"
                android:onClick="syncNow"
                android:text="@string/login_activity_done_button" />

            <Button
                android:id="@+id/syncNow_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dip"
                android:onClick="saveAccount"
                android:text="@string/login_activity_syncNow_button" />      
        </LinearLayout>
    </LinearLayout>

</ScrollView>