<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2010 Daniel Weisser

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_host_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/host_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:inputType="textUri"
            android:minWidth="300dip"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_encryption_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/encryption_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:prompt="@string/login_activity_encryption_prompt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_port_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/port_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:inputType="number"
            android:minWidth="300dip"
            android:numeric="integer"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_username_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:inputType="textEmailAddress"
            android:minWidth="300dip"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/login_activity_password_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:inputType="textPassword"
            android:minWidth="250dip"
            android:password="true"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_basedn_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/basedn_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:inputType="text"
            android:minWidth="300dip"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_searchfilter_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/searchfilter_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:inputType="text"
            android:minWidth="300dip"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dip"
                android:onClick="saveAccount"
                android:text="@string/login_activity_done_button" />
      
        </LinearLayout>
    </LinearLayout>

</ScrollView>